--- a/css/style.css
+++ b/css/style.css
@@ -132,11 +132,9 @@ body {
 }
 
 
-.menu>li:hover {
-}
+.menu>li:hover {}
 
-.menu li:hover .mainmenu {
-}
+.menu li:hover .mainmenu {}
 
 
 .mainmenu {
@@ -144,7 +142,7 @@ body {
   font-size: 21px;
   line-height: 70px;
   text-align: center;
- 
+
   border-bottom: 1px solid rgba(177, 201, 229, 0);
   transition: border 0.5s;
   z-index: 999;
@@ -233,144 +231,161 @@ body {
   justify-content: center;
   align-items: flex-end;
   height: 100%;
-  
+
 }
-.sw-visual{
-  
- 
-  width:80%;
+
+.sw-visual {
+
+
+  width: 80%;
   margin: 0 auto;
 }
-.sw-visual-prev{
+
+.sw-visual-prev {
   position: absolute;
-  left:0;
-  top:0;
+  left: 0;
+  top: 0;
   display: block;
-  width:98px;
+  width: 98px;
   height: 100%;
   border: 0;
   cursor: pointer;
   background-color: #fff;
-  box-shadow:10px 15px 25px rgb(0 0 0  / 8%);
+  box-shadow: 10px 15px 25px rgb(0 0 0 / 8%);
   z-index: 9;
   background: url('../images/1_15.svg')no-repeat center;
   transform: rotate(180deg);
 }
 
-.sw-visual-prev:hover{
+.sw-visual-prev:hover {
   background: #6889ff url('../images/1_16white.svg')no-repeat center;
 }
-.sw-visual-next:hover{
+
+.sw-visual-next:hover {
   background: #6889ff url('../images/1_16white.svg')no-repeat center;
 }
-.sw-visual-next
-{
+
+.sw-visual-next {
   position: absolute;
-  right:0;
-  top:0;
+  right: 0;
+  top: 0;
   display: block;
-  width:98px;
+  width: 98px;
   height: 100%;
   border: 0;
   cursor: pointer;
   background-color: #fff;
-  box-shadow: -10px 15px 25px rgb(0 0 0  / 8%);
-  
+  box-shadow: -10px 15px 25px rgb(0 0 0 / 8%);
+
   background: url('../images/1_15.svg')no-repeat center;
   z-index: 9;
 }
 
 
-.visual-icon{
+.visual-icon {
   display: block;
   text-align: center;
-  padding-top:85px;
+  padding-top: 85px;
   font-size: 16px;
   color: #333;
-  
+
   white-space: nowrap;
 }
-.visual-icon:hover{
+
+.visual-icon:hover {
   font-weight: 500;
 }
-.visual-icon::before{
+
+.visual-icon::before {
   content: '';
   position: absolute;
   transform: translateX(-50%);
-  left:50%;
-  top:0;
+  left: 50%;
+  top: 0;
   display: block;
-  width:70px;
+  width: 70px;
   height: 70px;
   background: #fff;
   border-radius: 18px;
   box-shadow: 5px 5px 15px rgb(0 0 0 / 10%);
   transition: background-color 0.3s;
 }
-.visual-icon:hover::before{
+
+.visual-icon:hover::before {
   background-color: #ffd233;
 }
+
 /*호버된것 자체를 찾아야하므로 띄어쓰기 금지*/
 
-.visual-icon::after{
+.visual-icon::after {
   content: '';
   position: absolute;
-  left:50%;
+  left: 50%;
   transform: translateX(-50%);
-  top:0;
+  top: 0;
   display: block;
-  width:70px;
+  width: 70px;
   height: 70px;
 }
-.visual-icon1{
-  
-}
-.visual-icon1::after{
+
+.visual-icon1 {}
+
+.visual-icon1::after {
   background: url('../images/bgicon1.svg')no-repeat center;
   /* background-size: cover; */
 }
 
-.visual-icon2::after{
+.visual-icon2::after {
   background: url('../images/bgicon2.svg')no-repeat center;
   /* background-size: cover; */
 }
-.visual-icon3::after{
+
+.visual-icon3::after {
   background: url('../images/bgicon3.svg')no-repeat center;
   /* background-size: cover; */
 }
-.visual-icon4::after{
+
+.visual-icon4::after {
   background: url('../images/bgicon4.svg')no-repeat center;
   /* background-size: cover; */
 }
-.visual-icon5::after{
+
+.visual-icon5::after {
   background: url('../images/bgicon5.svg')no-repeat center;
   /* background-size: cover; */
 }
-.visual-icon6::after{
+
+.visual-icon6::after {
   background: url('../images/bgicon6.svg')no-repeat center;
   /* background-size: cover; */
 }
-.visual-icon7::after{
+
+.visual-icon7::after {
   background: url('../images/bgicon7.svg')no-repeat center;
   /* background-size: cover; */
 }
-.visual-icon8::after{
+
+.visual-icon8::after {
   background: url('../images/bgicon8.svg')no-repeat center;
   /* background-size: cover; */
 }
-.visual-icon9::after{
+
+.visual-icon9::after {
   background: url('../images/bgicon9.svg')no-repeat center;
   /* background-size: cover; */
 }
-.visual-icon10::after{
+
+.visual-icon10::after {
   background: url('../images/bgicon10.svg')no-repeat center;
   /* background-size: cover; */
 }
-.visual-icon11::after{
+
+.visual-icon11::after {
   background: url('../images/bgicon11.svg')no-repeat center;
   /* background-size: cover; */
 }
-.visual-icon12::after{
+
+.visual-icon12::after {
   background: url('../images/bgicon12.svg')no-repeat center;
   /* background-size: cover; */
 }
@@ -379,29 +394,39 @@ body {
 
 
 
-.visual-icon2{}
-.visual-icon3{}
-.visual-icon4{}
-.visual-icon5{}
-.visual-icon6{}
-.visual-icon7{}
-.visual-icon8{}
-.visual-icon9{}
-.visual-icon10{}
-.visual-icon11{}
-.visual-icon12{}
+.visual-icon2 {}
 
-.visual-img{
+.visual-icon3 {}
+
+.visual-icon4 {}
+
+.visual-icon5 {}
+
+.visual-icon6 {}
+
+.visual-icon7 {}
+
+.visual-icon8 {}
+
+.visual-icon9 {}
+
+.visual-icon10 {}
+
+.visual-icon11 {}
+
+.visual-icon12 {}
+
+.visual-img {
   position: absolute;
-  left:0;
-  top:150px;
+  left: 0;
+  top: 150px;
   max-width: 592px;
 
 }
 
-.visual-wrap{
+.visual-wrap {
   position: relative;
-  width:100%;
+  width: 100%;
   background-color: #fff;
   margin-bottom: 70px;
   border-radius: 12px;
@@ -410,36 +435,455 @@ body {
   overflow: hidden;
 }
 
+/* 내용 공통사항 */
+.title-wrap {
+  text-align: center;
+
+}
+
+.title-icon {
+  display: block;
+  margin-bottom: 15px;
+
+}
+
+.title-h2 {
+  font-size: 42px;
+  line-height: 1.09;
+  margin-bottom: 16px;
+  font-weight: 700;
+  color: #222;
+  letter-spacing: -0.6px;
+}
+
+.title-desc {
+  font-size: 19px;
+  line-height: 1.47;
+  white-space: nowrap;
+}
+
+.color-w {
+  color: #fff;
+}
+
+.contents-wrap {
+  margin-top: 50px;
+}
+
 /* 소개 */
 
 .about {
   position: relative;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
   background: #f5fcff;
 }
 
-.about::before{
+.about::before {
   content: '';
   position: absolute;
   left: 0;
-  top:0;
+  top: 0;
   display: block;
   width: 485px;
-  height:578px;
+  height: 578px;
   background: url('../images/about.png')no-repeat center;
   background-size: cover;
 }
+
 .about .inner {}
 
+.about-box {
+  float: left;
+  height: 475px;
+  width: 32.5%;
+  margin-right: 1.25%;
 
+
+}
+
+.about-box-h3 {
+  display: block;
+  position: relative;
+  font-size: 26px;
+  line-height: 1.46;
+  color: #222;
+  letter-spacing: -0.5px;
+  font-weight: 700;
+}
+
+
+.about-box-h3::after {
+  content: '';
+  position: relative;
+  display: block;
+  width: 24px;
+  height: 3px;
+  background-color: #3d66c4;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.about-box-after-w::after {
+  background-color: #fff;
+}
+
+.about-box-txt {
+  position: relative;
+  font-size: 16px;
+  color: #222;
+
+}
+
+.pd-40 {
+  padding: 40px;
+}
+
+.wh {
+  color: #fff;
+}
+
+
+.arrow_b,
+.arrow_w {
+  position: absolute;
+  bottom: 40px;
+  display: block;
+  width: 34px;
+  height: 8px;
+  transition: transform 0.5s;
+}
+
+.about-box-symbol .arrow_b {
+  right: 0;
+  bottom: -35px;
+}
+
+.about-box-ceo .arrow_w {
+  left: 0;
+  bottom: -35px;
+
+}
+
+.about-box-member .arrow_b {
+  left: 0;
+  bottom: -35px;
+}
+
+.about-box-ceo:hover .arrow_w {
+  transform: translateX(50%);
+}
+
+.about-box-symbol:hover .arrow_b {
+  transform: translateX(50%);
+}
+
+.about-box-member:hover .arrow_b {
+  transform: translateX(50%);
+}
+
+.about-box-round {
+  position: relative;
+}
+
+.arrow_b {
+  background: url('../images/about_arrow_000.png')no-repeat center;
+  background-size: cover;
+}
+
+.arrow_w {
+  background: url('../images/about_arrow_fff.png')no-repeat center;
+  background-size: cover;
+}
+
+.about-box-left {}
+
+.about-box-center {}
+
+.about-box-right {
+  margin-right: 0;
+}
+
+.about-box-round {
+  border-radius: 20px 0px 20px 0px;
+  overflow: hidden;
+  height: 48.2%;
+  box-shadow: 2px 2px 15px rgb(63 68 138 / 15%);
+
+
+}
+
+.about-box-round a:hover .about-box-txt {
+  text-decoration: underline;
+}
+
+
+
+.mb-36 {
+  margin-bottom: 3.6%;
+}
+
+.about-box-member,
+.about-box-sns {
+  height: calc((100% - 3.6%)/2);
+}
+
+.about-box-ceo {
+
+  height: 56%;
+
+}
+
+.about-box-ceo a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url(../images/about_img1.png)no-repeat center;
+  background-size: cover;
+  color: #fff;
+}
+
+.about-box-symbol {
+  height: 40.4%;
+}
+
+.about-box-member a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url('../images/about_img4.png')no-repeat center;
+  background-size: cover;
+}
+
+.about-box-symbol a {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: #97c4ff url('../images/about_img2_bg.png')no-repeat right;
+  background-size: contain;
+}
+
+.about-box-symbol a::before {
+  position: absolute;
+  content: '';
+  right: 0;
+  bottom: 0;
+  display: block;
+  width: 282px;
+  height: 165px;
+  background: url('../images/about_img2.png')no-repeat bottom center;
+  background-size: cover;
+}
+
+
+.about-box-sns {
+
+  padding: 35px;
+  background: #b9c3ff;
+  /* background-size: cover; */
+}
+
+.about-box-sns::before {
+  content: '';
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: block;
+  width: 224px;
+  height: 226px;
+
+
+}
+
+.about-slide {
+  position: relative;
+  border-radius: 20px 20px 0 0;
+  height: 100%;
+  box-shadow: 2px 2px 15px rgb(63 68 138 / 15%);
+
+  overflow: hidden;
+}
+
+.sw-about {
+  width: 100%;
+  height: 100%;
+
+}
+
+.sw-about .swiper-slide a {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.sw-about .swiper-slide a img {
+  position: absolute;
+  left: -6px;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 100%;
+}
+
+.sw-about-control{
+  position: absolute;
+  left:0;
+  bottom: 0%;
+  width:100%;
+  height: 56px;
+  z-index: 9;
+background-color:#18263b;
+}
+.sw-about-title{
+  display: block;
+color: #fff;
+font-size: 20px;
+padding-left: 25px;
+float: left;
+line-height: 56px;
+
+}
+.sw-about-bt{
+float: right;
+padding-right: 25px;
+padding-top: 15px;
+}
+.sw-about-pg{
+  display: inline-block;
+ width:auto;
+ bottom: auto;
+ left: auto;
+color: #fff;
+font-size: 17px;
+vertical-align: 2px;
+margin-right: 25px;
+}
+.sw-about-prev{
+  width: 10px;
+  height: 17px;
+background: url('../images/btn/main_pop_leftarrow.png')no-repeat center;
+background-size: cover;
+cursor: pointer;
+border: 0;
+margin-right: 15px;
+}
+.sw-about-pause{
+  width: 10px;
+  height: 17px;
+background: url('../images/btn_play.png')no-repeat center;
+/* background-size: cover; */
+cursor: pointer;
+border: 0;
+margin-right: 15px;
+vertical-align: 1px;
+}
+
+.sw-about-play{
+  background: url('../images/btn/main_pop_stop.png')no-repeat center;
+}
+.sw-about-next{
+  width: 10px;
+  height: 17px;
+background: url('../images/btn/main_pop_rightarrow.png')no-repeat center;
+background-size: cover;
+cursor: pointer;
+border: 0;
+margin-right: 15px;
+}
+
+.about-box-char::before {
+  background: url(../images/char.png) no-repeat right bottom;
+  background-size: cover;
+}
+
+.about-box-char-1::before {
+  background: url(../images/char2.png) no-repeat right bottom;
+  background-size: cover;
+}
+
+.about-box-char-2::before {
+  background: url(../images/char3.png) no-repeat right bottom;
+  background-size: cover;
+}
+
+
+.about-box-sns-title {
+  position: relative;
+  font-size: 24px;
+  font-weight: 500;
+
+  color: #222;
+  margin-bottom: 15px;
+}
+
+.sns-icon-wrap {
+  position: relative;
+  display: block;
+  font-size: 0;
+  white-space: nowrap;
+  margin-top: 8px;
+
+}
+
+.sns-icon-wrap a {
+  display: inline-block;
+  width: 51px;
+  height: 51px;
+  font-size: 0;
+  margin-right: 8px;
+
+
+}
+
+
+
+.sns-icon-yt {
+  background: url('../images/about_yt.png')no-repeat center;
+  background-size: cover;
+}
+
+.sns-icon-fb {
+  background: url('../images/about_fb.png')no-repeat center;
+  background-size: cover;
+}
+
+.sns-icon-is {
+  background: url('../images/about_in.png')no-repeat center;
+  background-size: cover;
+}
+
+.sns-icon-bg {
+  background: url('../images/about_bl.png')no-repeat center;
+  background-size: cover;
+}
+
+.sns-icon-pt {
+  background: url('../images/about_na.png')no-repeat center;
+  background-size: cover;
+}
+
+.sns-icon-tw {
+  background: url('../images/about_tw.png')no-repeat center;
+  background-size: cover;
+}
+
+.sns-icon-kk {
+  background: url('../images/about_kt.png')no-repeat center;
+  background-size: cover;
+}
 
 /* 서비스 */
 .service {
   position: relative;
-  display: block;
-  width:100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   height: 100vh;
   background: url('../images/service.jpg')no-repeat center;
   background-size: cover;
@@ -447,16 +891,102 @@ body {
 
 .service .inner {}
 
+.service .contents-wrap{
+  height: 440px;
+  max-height: 440px;
+}
+.service-left{
+float: left;
+width:23.2%;
+height: 100%;
+border:2px solid #fff;
+border-top:3px solid #fff;
+margin-right:1.78%;
+padding: 40px;
+}
+
+.service-center{
+  float: left;
+  width: calc(100% - 46.4% - 3.56%);
+  height: 100%;
+
+  padding: 40px;
+
+}
+.service-right{
+  float: left;
+  width:23.2%;
+  height: 100%;
+  border:2px solid #fff;
+  border-top:3px solid #fff;
+  margin-left:1.78%;
+  padding: 40px;
+
+}
+
+.service-title-2{
+  font-weight: 500;
+  color: #fff;
+  font-size: 26px;
+  margin-bottom: 25px;
+}
+
+
+.service-list{
+
+}
+.service-list li{
+
+padding: 20px 0;
+border-bottom:  1px dashed #fff;
+}
+.service-list li:last-child{
+  border-bottom: 0;
+}
+.service-list li a{
+  position: relative;
+  display: inline-block;
+  font-size: 16px;
+  color: #fff;
+  font-weight: 300;
+
+}
+
+.service-list li a::after{
+  content: '';
+  position: absolute;
+  right: -50px;
+  top:50%;
+  transform: translateY(-50%);
+  width:34px;
+  height: 8px;
+  background: url('../images/about_arrow_fff.png')no-repeat;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.service-list li a:hover{
+  text-decoration: underline;
+  text-underline-position: underline;
+  
+}
+.service-list li a:hover::after{
+opacity: 1;
+
+}
 
 /* 뉴스 */
 .news {
   position: relative;
-  display: block;
-width:100%;
-height: 100vh;
-background-color: #f6f6f6;
-background: url('../images/news.png')no-repeat right bottom;
-background-size: ;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: #f6f6f6;
+  background: url('../images/news.png')no-repeat right bottom;
+  background-size: ;
 }
 
 .news .inner {}
@@ -464,12 +994,14 @@ background-size: ;
 /* 문화 */
 .culture {
   position: relative;
-  display: block;
-  width:100%;
-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
 
-background: #e8f4ff url('../images/culture.png')no-repeat left bottom;
-background-size: ;
+  background: #e8f4ff url('../images/culture.png')no-repeat left bottom;
+  background-size: ;
 }
 
 .culture .inner {}
@@ -478,10 +1010,10 @@ background-size: ;
 .job {
   position: relative;
   display: block;
-  width:100%;
+  width: 100%;
   height: 100vh;
   background: url('../images/job.jpg')no-repeat center;
-  background-size: 
+  background-size:
 }
 
 .job .inner {}
@@ -490,8 +1022,8 @@ background-size: ;
 .footer {
   position: relative;
   display: block;
-  
-  width:100%;
+
+  width: 100%;
   height: 170px;
   background-color: #141414;
   padding: 30px 0;
